# myai

./: .gitattributes  .gitignore  requirements.txt
projects/blog/: .dockerignore  .env.compose.dev  .env.compose.prod  .gitignore  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.backend.prod  alembic.ini  blog.db  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  environment.yml  export_to_win.sh  generate-ssl.sh  mypy.ini  nginx.conf  pyproject.toml  requirements.txt  restart_server.py  run_server.py  security-check.sh  setup-https.bat  setup-letsencrypt.sh  simple_restart.py  start-docker.sh  start.py  sync_from_win.sh
projects/blog/alembic/: env.py  script.py.mako
projects/blog/app/: __init__.py  celery_worker.py  exceptions.py  main.py
projects/blog/devenv/: environment.yml  fix_wsl.sh  notes.md  settings.json  setup-conda-powershell-auto-project-path.ps1  setup-conda-powershell.md  setup-github-ssh.ps1
projects/blog/frontend/: .dockerignore  .env  .env.development  .env.localdev  .env.production  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.frontend.prod  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
projects/blog/markdowns/: ADMIN_LOGIN_FIX.md  EMAIL_DYNAMIC_CONFIG.md  EMAIL_SETUP.md  HTTPS-SECURITY.md  LATEX_SOLUTION.md  OAUTH_FRONTEND_FIX.md  OAUTH_NETWORK_SOLUTION.md  OAUTH_SETUP.md  PAYPAL_SETUP.md  PROJECT_SUMMARY.md  README-ALEMBIC.md  README-APSCHEDULER.md  README-CELERY.md  README-DEPLOY.md  README-DOCKER-COMPOSE.md  README-FTS-SEARCH.md  README-GIT.md  README-HTTPS.md  README-POETRY.md  README-POSTGRESQL.md  README-Security.md  README.md  WECHAT_PAY_INTEGRATION_SUMMARY.md  WECHAT_PAY_SETUP.md  deploy-cloud.md  deploy_wsl.md  install_docker.md
projects/blog/mermaid/: fs.mmd  git-workflow.mmd
projects/blog/paper/: latex2md.py  mathematics.md  metaphysics.md  philosophy.md  physics.md
projects/blog/scripts/: deploy_wsl.sh  fix_wsl_proxy.sh  fts_check.py  generate-self-signed-cert.sh  init_db.prod.py  init_db.py  init_frontend.sh  init_sqlite.py  init_venv.sh  install_docker.sh  migrate-to-poetry.sh  migrate_media_volumes.sh  migrate_sqlite_to_pg.py  sqlite_test_query.py
projects/blog/tests/: admin_login_guide.py  alipay_wap_demo.py  alipay_wap_test.html  browser_login_guide.py  check_admin_roles.py  check_admin_users.py  check_articles.py  check_config.py  check_donation_data.py  check_donation_tables.py  check_frontend_url.py  check_github_redirect_uri.py  check_google_oauth.py  check_oauth_config.py  check_users.py  clean_fts5.py  create_admin.py  create_admin_user.py  debug_admin_creation.py  debug_admin_login_error.py  debug_form_submission.py  debug_google_oauth.py  debug_search.py  debug_token.py  delete_table_row.py  demo_paypal.py  demo_wechat_pay.py  diagnose_google_oauth.py  diagnose_oauth.py  disable_google_oauth.py  fix_admin_cache_issue.py  fix_admin_cache_middleware.py  fix_admin_roles.py  fix_email_config.py  fix_enum_values.py  fix_fts5_issue.py  fix_google_oauth_network.py  force_clean_fts5.py  init_database.py  insert_notification.py  (+80 more)
projects/crawler/: README.md  pyproject.toml  pyrightconfig.json
projects/crawler/adapters/: base.py  bs4.py  httpx.py  playwright.py  scrapy.py
projects/crawler/config/: config.py  registry.py
projects/crawler/crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/crawler/discovery/: base.py  engine.py  registry.py  result.py
projects/crawler/downloader/: base.py  engine.py  registry.py
projects/crawler/extractor/: extractor.py
projects/crawler/pagination/: base.py  engine.py  note.md  registry.py  result.py
projects/crawler/request/: context.py
projects/crawler/runner/: base.py  crawler_runner.py  scheduler_runner.py  single_runner.py
projects/crawler/scheduler/: base.py  cron.py  event.py
projects/crawler/selector/: base.py  engine.py  registry.py
projects/crawler/service_scrapy_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/crawler/task/: base.py  factory.py  model.py
projects/crawler/transform/: base.py  engine.py  registry.py
projects/service-playwright-example/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/service-playwright-example/.devcontainer/: devcontainer.json  docker-compose.yml
projects/service-playwright-example/service_playwright_example.egg-info/: PKG-INFO  SOURCES.txt
projects/service-playwright-example/service_scrapy_example.egg-info/: PKG-INFO  requires.txt
projects/service-playwright-example/tests/: test_news_crawler.py
projects/service-scrapy/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/service-scrapy/.devcontainer/: devcontainer.json  docker-compose.yml
(+451 files in other folders)
