[project]
name = "myblog"
version = "1.0.0"
description = ""
authors = [
    {name = "zheng88"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiohttp (==3.9.1)",
    "aioredis (==2.0.1)",
    "aiosignal (==1.3.2)",
    "aiosqlite (==0.21.0)",
    "alembic (==1.12.1)",
    "annotated-types (==0.7.0)",
    "anyio (==3.7.1)",
    "apscheduler (==3.11.0)",
    "async-timeout (==4.0.3)",
    "asyncpg (==0.30.0)",
    "attrs (==25.3.0)",
    "authlib (==1.6.0)",
    "babel (==2.17.0)",
    "bcrypt (==4.3.0)",
    "certifi (==2025.6.15)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "cryptography (==45.0.4)",
    "ecdsa (==0.19.1)",
    "exceptiongroup (==1.3.0)",
    "fastapi (==0.104.1)",
    "fastapi-admin (==1.0.4)",
    "frozenlist (==1.7.0)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iso8601 (==2.1.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "multidict (==6.5.1)",
    "passlib (==1.7.4)",
    "pendulum (==3.1.0)",
    "propcache (==0.3.2)",
    "psycopg2-binary (==2.9.10)",
    "pyasn1 (==0.6.1)",
    "pycparser (==2.22)",
    "pycryptodome (==3.23.0)",
    "pycryptodomex (==3.23.0)",
    "pydantic (==2.11.7)",
    "pydantic-settings (==2.1.0)",
    "pydantic-core (==2.33.2)",
    "pyopenssl (==25.1.0)",
    "pypika-tortoise (==0.6.1)",
    "python-alipay-sdk (==3.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.0)",
    "python-jose (==3.3.0)",
    "python-multipart (==0.0.6)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "redis (==6.2.0)",
    "requests (==2.32.4)",
    "rsa (==4.9.1)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqladmin (==0.20.1)",
    "sqlalchemy (==2.0.23)",
    "sqlmodel (==0.0.14)",
    "starlette (==0.27.0)",
    "tortoise-orm (==0.25.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "tzdata (==2025.2)",
    "tzlocal (==5.3.1)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.24.0)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.1.0)",
    "websockets (==15.0.1)",
    "wechatpayv3 (==1.3.11)",
    "wtforms (==3.1.2)",
    "yarl (==1.20.1)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
